--- a/example/example.html
+++ b/example/example.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="iconfont.css">
+  <title>example</title>
+  <link rel="stylesheet" href="./output/iconfont.css">
 </head>
 <body>
   <i class="iconfont icon-arrow"></i>
